--- a/WeatherView/index.html
+++ b/WeatherView/index.html
@@ -7,7 +7,7 @@
     <title>气象数据渲染测试</title>
     <style>
         #cvs-weather {
-            background-color: aquamarine;
+            background-color: 'rgba(0,0,0,0)';
             display: block;
             width: 90%;
             height: 90%;
@@ -53,9 +53,11 @@
         const wvMin = W_CONVERT_OPT[render_cfg.weather.type].min;
         const wvMax = W_CONVERT_OPT[render_cfg.weather.type].max;
         const wvScale = W_CONVERT_OPT[render_cfg.weather.type].scale;
-        const wvAlpha = render_cfg.alpha;
+
+
         // 设置颜色和数值  
-        var weatherRenderColors = [];
+        var wRenderColors = [];
+        var wRenderThresholds = [];
         // 根据给定数值进行对应的GLSL转换
 
         var colorLables = W_DEFAULT_COLOR_LABLES;
@@ -63,7 +65,8 @@
         {
             var glsl_color = ARGB_TO_GLSL_VEC4(colorLables[render_cfg.weather.type].colors[i]);
             var glsl_threshold = (colorLables[render_cfg.weather.type].thresholds[i] - wvMin) * wvScale / 255.0;
-            weatherRenderColors[i] = [glsl_color[0], glsl_color[1],glsl_color[2], glsl_threshold];
+            wRenderColors[i] = glsl_color;
+            wRenderThresholds[i] = glsl_threshold;
         }
 
         /// 下面开始加载矩阵数据并且渲染
@@ -71,7 +74,7 @@
         const gl = LoadGL(cvs);
 
         // 不同机器支持的顶点数组长度不一样, 有些机器不能显示
-        ASSERT(weatherRenderColors.length <= gl.getParameter(gl.MAX_VERTEX_ATTRIBS), "该机器顶点数组长度最大支持：" + gl.getParameter(gl.MAX_VERTEX_ATTRIBS) + ", 当前顶点数组长度:" + weatherRenderColors.length)
+        ASSERT(wRenderColors.length <= gl.getParameter(gl.MAX_VERTEX_ATTRIBS), "该机器顶点数组长度最大支持：" + gl.getParameter(gl.MAX_VERTEX_ATTRIBS) + ", 当前顶点数组长度:" + wRenderColors.length)
 
         // 渲染函数,结合具体业务处理
         function RenderNormal(cfg) {
@@ -123,23 +126,21 @@
             // gl.uniform2f(textureSizeLocation, cfg.texture.width, cfg.texture.heigth);
 
             // 坐标偏移计算参数
-            const offsetLocation = gl.getUniformLocation(program, 'coordOffset');
-            gl.uniform2fv(offsetLocation, offCoords.flat());
+            const glLocOffset = gl.getUniformLocation(program, 'coordOffset');
+            gl.uniform2fv(glLocOffset, offCoords.flat());
     
 
-            // 设置透明度 
-            const alphaLocation = gl.getUniformLocation(program, 'wvAlpha');
-            gl.uniform1f(alphaLocation, wvAlpha);
+            // 将颜色传递给着色器 
+            const glLocColors = gl.getUniformLocation(program, 'wvColors');
+            gl.uniform4fv(glLocColors, wRenderColors.flat());
 
-
-            const colorsLocation = gl.getUniformLocation(program, 'wvColors');
-
-            // 将颜色传递给着色器  
-            gl.uniform4fv(colorsLocation, weatherRenderColors.flat());
+             // 将颜色传递给着色器 
+             const glLocThresholds = gl.getUniformLocation(program, 'wvThresholds');
+            gl.uniform1fv(glLocThresholds, wRenderThresholds);
 
             // 设置有效颜色数量
-            const colorCountLocation = gl.getUniformLocation(program, 'wvColorNum');
-            gl.uniform1i(colorCountLocation, weatherRenderColors.length);
+            const glLocColorNum = gl.getUniformLocation(program, 'wvColorNum');
+            gl.uniform1i(glLocColorNum, wRenderColors.length);
 
             // 设置纹理单元
             const textureLocation = gl.getUniformLocation(program, 'u_image');
