--- a/WeatherView/index.html
+++ b/WeatherView/index.html
@@ -9,7 +9,7 @@
     <!-- 通过修改canvas的透明度 -->
     <style>
         .container {
-            border: 1px solid black; /* 可选：添加边框以便更清楚地看到 canvas */
+            border: 3px solid black; /* 可选：添加边框以便更清楚地看到 canvas */
         display: flex;
         justify-content: center; /* 使内容水平居中 */
         align-items: flex-end; /* 使内容垂直顶部对齐 */
@@ -20,18 +20,18 @@
             border: 1px solid black; /* 可选：添加边框以便更清楚地看到 canvas */
             background-color: #00000000;
             display: block;
-            width: 90%;
-            height: 90%;
+            width: 97%;
+            height: 100%;
         }
 
         #cvs-label {
             border: 1px solid black; /* 可选：添加边框以便更清楚地看到 canvas */
-            width: 5%;
-            height: 90%;
+            width: 3%;
+            height: 100%;
         }
 
         .slider {
-            width: 90%;
+            width: 1920px;
             height: 15px;
             background: #ddd;
             border-radius: 5px;
