坐标已经转换,但是效果不对

--- a/WeatherView/index.html
+++ b/WeatherView/index.html
@@ -55,7 +55,8 @@
      <div class="container"> 
         
         <canvas id="cvs-label"><p>图例</p></canvas>
-        <canvas id="cvs-weather"></canvas>
+        <!-- 绘制目标越大,图像越清晰 -->
+        <canvas id="cvs-weather" width="1920" height="1080"></canvas>
        
      </div>
      <div class="flex flex-col items-center" >
