--- a/WeatherView/index.html
+++ b/WeatherView/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>气象数据渲染测试</title>
     <!-- 通过修改canvas的透明度 -->
-    <script src="marco.js"></script>
-    <script src="shader.js"></script>
-    <script src="tools.js"></script>
+    <script src="js/marco.js"></script>
+    <script src="js/shader.js"></script>
+    <script src="js/tools.js"></script>
     
     <style>
         .container {  
