--- a/WeatherView/map.html
+++ b/WeatherView/map.html
@@ -10,13 +10,13 @@
 
     <link rel="stylesheet" href="leaflet/leaflet.css" crossorigin="" />
     <script src="leaflet/leaflet.js" crossorigin=""></script>
-    <script src="marco.js" crossorigin=""></script>
-    <script src="shader.js" crossorigin=""></script>
-    <script src="tools.js" crossorigin=""></script>
-    <script src="render.js" crossorigin=""></script>
-    <script src="events.js" crossorigin=""></script>
-    <script src="styles.js" crossorigin=""></script>
-    <script src="resource.js" crossorigin=""></script>
+    <script src="js/marco.js" crossorigin=""></script>
+    <script src="js/shader.js" crossorigin=""></script>
+    <script src="js/tools.js" crossorigin=""></script>
+    <script src="js/render.js" crossorigin=""></script>
+    <script src="js/events.js" crossorigin=""></script>
+    <script src="js/styles.js" crossorigin=""></script>
+    <script src="js/resource.js" crossorigin=""></script>
 
     <style>
         html,
