--- a/WeatherView/map.html
+++ b/WeatherView/map.html
@@ -58,25 +58,194 @@
         <label for="lonlat">经纬度:</label>
         <input type="text" id="lonlat" placeholder="输入经纬度" />
         <button id="locateButton">定位</button>
-
         <button id="locateCNButton">定位到中国</button>
+        <!-- 新增的下拉框 -->
+        <label for="publishSelect">预报来源:</label>
+        <select id="publishSelect">
+            <option value="">加载中...</option>
+        </select>
+        <!-- 数据类型选择 -->
+        <label for="dataTypeSelect">数据类型:</label>
+        <select id="dataTypeSelect">
+            <option value="APCP">累计降雨</option>
+            <option value="TMP">平均温度</option>
+            <option value="RH">相对湿度</option>
+            <option value="PRES">近地气压</option>
+        </select>
+        <label for="intvSelect">时间步长:</label>
+        <select id="intvSelect">
+            <option value=3>逐3小时</option>
+            <option value=6>逐6小时</option>
+            <option value=12>逐12小时</option>
+            <option value=24>逐24小时</option>
+        </select>
+        <button id="prevFrame">上一帧</button>
+        <label>时间:</label>
+        <input type="text" id="timeRangeDisplay" readonly style="width: 300px;" />
+
+
+        <button id="nextFrame">下一帧</button>
+
     </div>
     <div id="map"></div>
     <script>
+        let globalPublishTM = "";
+        let globalSource = "NOAA";
+        let globalINTV = 3;
+        let globalBTM = "";            // 开始时间
+        let globalETM = "";            // 结束时间
+        let globalType = "APCP";       // 数据类型
+        const MAX_DAYS = 15;           // 最大时间跨度：10 天
+        window.onload = function () {
+            const publishSelect = document.getElementById("publishSelect");
+            const dataTypeSelect = document.getElementById("dataTypeSelect");
+            const intvSelect = document.getElementById("intvSelect");
+            const timeRangeDisplay = document.getElementById("timeRangeDisplay");
+            const prevFrameBtn = document.getElementById("prevFrame");
+            const nextFrameBtn = document.getElementById("nextFrame");
 
-        const map = L.map('map',{zoomSnap: 0.1 // 设置更小的缩放粒度
+            // 初始化数据类型
+            globalType = dataTypeSelect.value;
+
+            // 请求远程数据并填充发布来源
+            fetch("http://192.168.0.179:18080/forecast/api/data/publish/time/latest")
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status === 1 && data.data) {
+                        publishSelect.innerHTML = "";
+
+                        for (const key in data.data) {
+                            const option = document.createElement("option");
+                            option.value = key;
+                            option.textContent = key;
+                            option.dataset.time = data.data[key];
+                            publishSelect.appendChild(option);
+                        }
+
+                        publishSelect.selectedIndex = 0;
+                        globalPublishTM = publishSelect.options[0].dataset.time;
+                        globalSource = publishSelect.value; // 设置初始来源
+                        // 触发一次更新
+                        console.log("初始 数据源:", globalSource, " PublishTM:", globalPublishTM);
+                        updateGlobalPublishTM();
+                        RenderWeather();
+                    } else {
+                        publishSelect.innerHTML = "<option>获取数据失败</option>";
+                    }
+                })
+                .catch(error => {
+                    console.error("请求 Publish 时间失败:", error);
+                    publishSelect.innerHTML = "<option>请求出错</option>";
+                });
+            // 监听来源变化
+            publishSelect.addEventListener("change", function () {
+                globalSource = this.value;
+                updateGlobalPublishTM();
+                resetTimeRange(); // 重置时间范围
+                RenderWeather(); // 刷新天气渲染
+            });
+
+            // 监听数据类型变化
+            dataTypeSelect.addEventListener("change", function () {
+                globalType = this.value;
+                RenderWeather();
+            });
+
+            intvSelect.addEventListener("change", function () {
+                globalINTV = parseInt(this.value);
+                resetTimeRange(); // 重置时间范围
+                RenderWeather(); // 刷新天气渲染
+            });
+
+            // 更新 globalPublishTM 并设置初始 Btm/Etm
+            function updateGlobalPublishTM() {
+                const selectedOption = publishSelect.options[publishSelect.selectedIndex];
+                globalPublishTM = selectedOption.dataset.time || "";
+                resetTimeRange();
+            }
+
+            // 重置时间范围
+            function resetTimeRange() {
+                const intv = parseInt(globalINTV);
+                globalBTM = globalPublishTM;
+                globalETM = addHoursToDate(globalPublishTM, intv);
+                console.log("重置 BTM:", globalBTM, "ETM:", globalETM);
+                refreshTimeDisplay();
+                toggleButtonsState();
+            }
+
+            // 将字符串日期加 n 小时
+            function addHoursToDate(dateStr, hours) {
+                const date = new Date(dateStr.replace(' ', 'T'));
+                date.setHours(date.getHours() + hours);
+                return formatDate(date);
+            }
+
+            // 格式化日期为 "YYYY-MM-DD HH:mm"
+            function formatDate(date) {
+                const year = date.getFullYear();
+                const month = String(date.getMonth() + 1).padStart(2, '0');
+                const day = String(date.getDate()).padStart(2, '0');
+                const hours = String(date.getHours()).padStart(2, '0');
+                const minutes = String(date.getMinutes()).padStart(2, '0');
+                return `${year}-${month}-${day} ${hours}:${minutes}`;
+            }
+
+            // 刷新显示
+            function refreshTimeDisplay() {
+                timeRangeDisplay.value = `${globalBTM} - ${globalETM}`;
+            }
+
+            // 控制按钮状态
+            function toggleButtonsState() {
+                const publishDate = new Date(globalPublishTM.replace(' ', 'T'));
+                const btmDate = new Date(globalBTM.replace(' ', 'T'));
+                const etmDate = new Date(globalETM.replace(' ', 'T'));
+
+                const maxFutureDate = new Date(publishDate);
+                maxFutureDate.setDate(maxFutureDate.getDate() + MAX_DAYS);
+
+                prevFrameBtn.disabled = btmDate <= publishDate;
+                nextFrameBtn.disabled = etmDate >= maxFutureDate;
+            }
+
+            // 上一帧
+            prevFrameBtn.addEventListener("click", function () {
+                const intv = parseInt(globalINTV);
+                globalBTM = addHoursToDate(globalBTM, -intv);
+                globalETM = addHoursToDate(globalETM, -intv);
+                refreshTimeDisplay();
+                toggleButtonsState();
+                RenderWeather();
+            });
+
+            // 下一帧
+            nextFrameBtn.addEventListener("click", function () {
+                const intv = parseInt(globalINTV);
+                globalBTM = addHoursToDate(globalBTM, intv);
+                globalETM = addHoursToDate(globalETM, intv);
+                refreshTimeDisplay();
+                toggleButtonsState();
+                RenderWeather();
+            });
+            //RenderWeather();
+        };
+
+        const map = L.map('map', {
+            zoomSnap: 0.1 // 设置更小的缩放粒度
         }).setView([38, 104.0], 5.2);
         let CURRENT_ZOOM = map.getZoom();
-
-        const tiles = L.tileLayer(ArcGISHub.SateFireImage, {
-            maxZoom: 18,
+        // 设置地图的最大缩放级别
+        const usedMap = TzxMap;
+        const tiles = L.tileLayer(usedMap.Image, {
+            maxZoom: usedMap.max,
             crossOrigin: true,
             crossOriginCredentials: true
         }).addTo(map);
 
         LeafletLoadGeoJSON(map, "vector/china_province_1e-4.geojson", VECTOR_STYLE.SHENG_LINE)
 
-       
+
 
         // 将 canvas 插入到地图容器中
         // const mapContainer = map.getContainer();
@@ -104,18 +273,18 @@
             });
         }
 
-    // 创建一个 canvas 元素,用于绘制气象数据
-    const cvsWeather = document.createElement('canvas');
-                cvsWeather.width = 1920;
-                cvsWeather.height = 1080;
+        // 创建一个 canvas 元素,用于绘制气象数据
+        const cvsWeather = document.createElement('canvas');
+        cvsWeather.width = 1920;
+        cvsWeather.height = 1080;
         var weatherImgOverlay = null;
 
 
         async function RenderWeather() {
-
+            //return;
             try {
-             
-                let param = CreateRenderParam(map, TMP, NOAA);
+
+                let param = CreateRenderParam(map);
                 // var glWeather = LoadGL(cvsWeather);
                 await LoadTexture(cvsWeather, param.url, RenderNormal, param);
                 // RenderNormal(glWeather, param);
@@ -137,43 +306,9 @@
 
 
         }
-        RenderWeather();
-        // RenderLable(glLable);
-        //const uur = 'http://192.168.0.141:8086/radar_henan/api/data/render?type=REF&btm=2024-06-20%2008%3A00&etm=2024-06-20%2008%3A55&project=HENANPRO&station=HENAN1';
-        //const uur = 'http://192.168.0.141:8086/radar_henan/api/data/render?type=REF&btm=2024-06-20%2008%3A00&etm=2024-06-20%2008%3A55&project=HENANPRO&station=';
+        //RenderWeather();
 
-
-        // const uur = 'http://192.168.0.141:8086/radar_henan/api/data/render?type=REF&btm=2024-06-20%2008%3A55&etm=2024-06-20%2008%3A55&project=HENANPRO&station=';
-        // fetch(uur) // 替换为实际的 API URL
-        //     .then(response => response.json())
-        //     .then(data => {
-        //         if (data.status === 1) {
-        //             const { left, right, top, bottom, png } = data.data;
-
-        //             // 定义图片的边界范围
-        //             const bounds = [
-        //                 [top, left],    // 左上角坐标
-        //                 [bottom, right] // 右下角坐标
-        //             ];
-
-        //             // 创建 Base64 图片的 URL
-        //             imageUrl = `data:image/png;base64,${png}`;
-
-        //             // 将图片添加到地图上
-        //             //imageUrl= "img/test8.png";
-        //             L.imageOverlay(imageUrl, bounds).addTo(map);
-
-        //             // 可选：调整地图视图以适应图片范围
-        //             // map.fitBounds(bounds);
-        //         } else {
-        //             console.error('Error fetching image:', data.message);
-        //         }
-        //     })
-        //     .catch(error => {
-        //         console.error('Failed to fetch data:', error);
-        //     });
-
-        function CreateRenderParam(map, selectType, selectProvider) {
+        function CreateRenderParam(map) {
             const _b = map.getBounds();
             const mb = {
                 left: _b.getSouthWest().lng,
@@ -187,18 +322,15 @@
                 top: 54.0,
                 bottom: 18.0
             };
+            let formatURL = "http://192.168.0.179:18080/forecast/api/image/shader?";
+            formatURL += "source=" + globalSource;
+            formatURL += "&type=" + globalType;
+            formatURL += "&ptm=" + globalPublishTM;
+            formatURL += "&btm=" + globalBTM;
+            formatURL += "&etm=" + globalETM;
+            formatURL += "&tm=" + globalBTM;
             let param =
             {
-                // bounds: [
-                //     [
-                //         Math.max(mb.getSouthEast().lat, data_bound[0][0]),
-                //         Math.max(mb.getSouthEast().lng, data_bound[0][1])
-                //     ], // 西南角
-                //     [
-                //         Math.min(mb.getNorthWest().lat, data_bound[1][0]),
-                //         Math.min(mb.getNorthWest().lng, data_bound[1][1])
-                //     ] // 东北角 
-                // ],
                 cvsBound: {
                     left: Math.max(mb.left, gb.left),
                     right: Math.min(mb.right, gb.right),
@@ -215,14 +347,14 @@
 
                 // 渲染用的参数
                 weather: {
-                    type: selectType,
-                    provider: selectProvider
+                    type: globalType,
+                    provider: globalSource
                 },
-                url: "img/"+selectType+".png",
+                url: formatURL,
                 // 取对应类型的数据转换参数
-                wvMin: W_CONVERT_OPT[selectType].min,
-                wvMax: W_CONVERT_OPT[selectType].max,
-                wvScale: W_CONVERT_OPT[selectType].scale,
+                wvMin: W_CONVERT_OPT[globalType].min,
+                wvMax: W_CONVERT_OPT[globalType].max,
+                wvScale: W_CONVERT_OPT[globalType].scale,
                 // 设置颜色和数值  
                 wRenderColors: [],
                 wRenderThresholds: [],
@@ -231,9 +363,9 @@
 
             // 渲染颜色取默认设置,也可以自行定义
             colorLables = W_DEFAULT_COLOR_LABLES;
-            for (i = 0; i < colorLables[selectType].thresholds.length; ++i) {
-                glsl_color = ARGB_TO_GLSL_VEC4(colorLables[selectType].colors[i]);
-                glsl_threshold = colorLables[selectType].thresholds[i] - param.wvMin;
+            for (i = 0; i < colorLables[globalType].thresholds.length; ++i) {
+                glsl_color = ARGB_TO_GLSL_VEC4(colorLables[globalType].colors[i]);
+                glsl_threshold = colorLables[globalType].thresholds[i] - param.wvMin;
                 param.wRenderColors[i] = glsl_color;
                 param.wRenderThresholds[i] = glsl_threshold;
             }
