--- a/WeatherView/map.html
+++ b/WeatherView/map.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Quick Start - Leaflet</title>
+    <title>天气预报</title>
 
     <link rel="stylesheet" href="leaflet/leaflet.css" crossorigin="" />
     <script src="leaflet/leaflet.js" crossorigin=""></script>
@@ -69,6 +69,31 @@
             white-space: nowrap;
             /* 防止换行 */
         }
+
+        #legend {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 10px;
+            border: 1px solid #ccc;
+            background-color: #f9f9f9;
+        }
+
+        .legend-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-right: 10px;
+            font-size: 12px;
+            white-space: nowrap;
+        }
+
+        .color-box {
+            width: 30px;
+            height: 20px;
+            border: 1px solid #666;
+            margin-bottom: 4px;
+        }
     </style>
 </head>
 
@@ -119,6 +144,7 @@
         let globalBTM = "";            // 开始时间
         let globalETM = "";            // 结束时间
         let globalType = "APCP";       // 数据类型
+        let globalLegend = W_DEFAULT_COLOR_LABLES[globalType]; // 图例
         const MAX_DAYS = 15;           // 最大时间跨度：10 天
         window.onload = function () {
             const publishSelect = document.getElementById("publishSelect");
@@ -197,8 +223,38 @@
                     document.getElementById('infoIntv').textContent = '';
                     document.getElementById('infoTimeRange').textContent = `${globalETM || '-'}`;
                 }
+                // 更新图例
+                globalLegend = W_DEFAULT_COLOR_LABLES[globalType]
+                const legendDiv = document.getElementById('legend');
+                // 先清空原来的div
+                legendDiv.innerHTML = '';
+                for (let i = 1; i < globalLegend.thresholds.length-1; i++) {
+                    const threshold = globalLegend.thresholds[i];
 
+                    // 创建颜色块
+                    const colorBox = document.createElement('div');
+                    const hexColor = '#' + globalLegend.colors[i].substring(2); // 去掉前缀 cf，转为 #RRGGBB
+                    colorBox.className = 'color-box';
+                    colorBox.style.backgroundColor = hexColor;
 
+                    // 创建文字标签
+                    const label = document.createElement('div');
+                    if (i === 1) {
+                        label.textContent = '< ' + threshold.toFixed(1);
+                    } else if (i === globalLegend.thresholds.length - 2) {
+                        label.textContent = '≥ ' + threshold.toFixed(1);
+                    } else {
+                        label.textContent = threshold.toFixed(1);
+                    }
+
+                    // 创建图例项
+                    const item = document.createElement('div');
+                    item.className = 'legend-item';
+                    item.appendChild(colorBox);
+                    item.appendChild(label);
+
+                    legend.appendChild(item);
+                }
 
             }
 
@@ -485,6 +541,7 @@
             <div>数据类型: <span id="infoType">APCP</span> <span id="infoIntv"></span></div>
             <div>发布时间: <span id="infoPublishTM">-</span></div>
             <div>数据时间: <span id="infoTimeRange">-</span></div>
+            <div id="legend"></div>
         </div>
     </div>
 
